--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://wordpress-862545-2981102.cloudwaysapps.com/tgy
+    <meta http-equiv="Refresh" content="0; url=https://wordpress-863669-2985645.cloudwaysapps.com/htm
 " />
   </head>
   <body>
